# python-inliner

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DONE.md  ENGINEERING_GUIDELINES.md  LICENSE  Makefile  README.md  SPEC.md  TODO.md  check_input  pyproject.toml
admin/clean-release/: context.md  plan.md
admin/issues/: function-scoped-imports.md
llm/: py-packages.md  virtual-filesystem-spec.md
src/: main.rs  test_utils.rs
src/modules/: file_system.rs  virtual-filesystem-implementation.rs  virtual_filesystem.rs
src/utils/: python.rs
test/: expected_output.txt  main-inlined.py  main.py  test_multiline_type_checking.py  test_multiline_type_checking_inlined.py  test_type_checking.py  test_type_checking_bug.sh  test_type_checking_inlined.py
test/aliens/: alien.py
test/modules/: class1.py  class2.py  environment.py  module_with_type_checking.py  provider_config.py  type_only_module.py
test/modules/submodules/: class3.py
test/tacos/: pyproject.toml
test/tacos/tacos.egg-info/: SOURCES.txt
