[package]
name = "pyroll"
version = "0.1.0"
edition = "2021"
authors = ["Bill Doughty <bill@doughty.com>"]
description = "A command-line interface (CLI) tool for inlining Python modules from a specified directory into a given Python script."
readme = "README.md"
repository = "https://github.com/shock/pyroll"
license = "MIT"
keywords = ["python", "cli", "inline", "module"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
regex = "1.5"
