[package]
name = "python-inliner"
version = "0.1.0"
edition = "2021"
authors = ["Bill Doughty <bill@doughty.com>"]
description = "A CLI tool for inlining Python files from a sub-directory into a given Python script as a single file."
readme = "README.md"
repository = "https://github.com/shock/python-inliner"
license = "MIT"
keywords = ["python", "cli", "inline", "module"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
regex = "1.5"
pyo3 = "0.22.3"
