[package]
name = "python-inliner"
version = "0.5.3"
edition = "2021"
authors = ["Bill Doughty <github@wdoughty.net>"]
description = "A CLI tool for inlining Python files from a sub-directory into a given Python script as a single file."
readme = "README.md"
repository = "https://github.com/shock/python-inliner"
license = "MIT"
keywords = ["python", "cli", "inline", "module"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
serde_json = "1.0.128"
regex = "1.11.0"
